--- a/.github/Pylint.yml
+++ b/.github/Pylint.yml
@@ -30,6 +30,6 @@ jobs:
           commit_message: 'pylint auto fixes'
           commit_options: '--no-verify'
           repository: .
-          commit_user_name: Unknown-san
-          commit_user_email: Unknown-san@users.noreply.github.com
-          commit_author: Unknown-san <Unknown-san@users.noreply.github.com>
+          commit_user_name: AuraMoon55
+          commit_user_email: AuraMoon55@users.noreply.github.com
+          commit_author: AuraMoon55 <AuraMoon55@users.noreply.github.com>
